--- a/views/include/old_login.ejs
+++ b/views/include/old_login.ejs
@@ -26,4 +26,4 @@
         </div>
     </div>
 </div>
-<script src="/js/fetch_request/login.js"></script>
+<script src="/js/fetch_request/old_login.js"></script>
