--- a/views/include/shop/profile.ejs
+++ b/views/include/shop/profile.ejs
@@ -77,7 +77,7 @@
                         <span>price</span>
                     </div>
                 </a>
-                <div class="overlay-text text-light display-5"></div>
+                <div class="overlay-text text-light"></div>
             </div>
         </template>
         <template id="date-Line">
