--- a/views/include/shop/profile.ejs
+++ b/views/include/shop/profile.ejs
@@ -68,9 +68,20 @@
         </div>
     </div>
     <div class="row">
+        <div class="card col-12 mt-3 ">
+            <div id="schedule" class="card-body col-sm-12">
+                <h3>營業時間</h3>
+            </div>
+        </div>
+    </div>
+    <div id="options" class="row mt-3 justify-content-start align-items-center">
+        <button class="btn btn-primary mt-3 md-5" onclick="addProductForm()">新增商品</button>
+    </div>
+    <div id="product" class="row mt-3 justify-content-start align-items-center"></div>
+    <div class="row">
         <template id="productTemplate">
             <div class="card col-sm-6 col-md-3 mt-3 mr-3">
-                <a class="text-decoration-none">
+                <a class="text-decoration-none" onclick="productClick(this.parentNode);return false;">
                     <img class="img-fluid" src="/images/background.jpg">
                     <div class="card-footer justify-content-between">
                         <span>name</span>
@@ -91,21 +102,61 @@
                 <label class="form-check-label"></label>
             </div>
         </template>
-        <script src="/js/fetch_request/storePage.js"></script>
-    </div>
-    <div class="row">
-        <div class="card col-12 mt-3 ">
-            <div id="schedule" class="card-body col-sm-12">
-                <h3>營業時間</h3>
+        <template id="productCardTemplate">
+            <div class="card-body">
+                <div class="input-group mb-2">
+                    <h4 name="title" class="ml-auto"></h4>
+                    <button class="btn ml-auto" tabindex="-1" onclick="swal.close()">X</button>
+                </div>
+                
+                <div class="input-group mb-2">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">敘述</span>
+                    </div>
+                    <input type="text" name="describe" class="form-control" disabled>
+                </div>
+                <div class="input-group mb-2">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">價錢</span>
+                    </div>
+                    <input type="text" name="price" class="form-control" disabled>
+                </div>
+                <div class="input-group mb-2">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">標籤</span>
+                    </div>
+                    <input type="text" name="type" class="form-control" disabled>
+                </div>
+                    
+                <div name="options"></div>
+
+                <div name="btns" class="input-group d-flex mb-2">
+                    <button name="del" class="btn btn-danger mt-1">刪除</button>
+                    <div class="ml-auto">
+                        <button name="unpause" class="btn btn-secondary mt-1 d-none" onclick="pause()">重新上架</button>
+                        <button name="pause" class="btn btn-warning mt-1 d-none" onclick="pause()">暫時下架</button>
+                        <button name="update" class="btn btn-primary mt-1" onclick="update()">編輯</button>
+                    </div>
+                </div>
             </div>
-        </div>
+        </template>
+        <template id="productOptionsTemplate">
+            <div class="input-group mb-2">
+                <div class="input-group-prepend">
+                    <span name="title" class="input-group-text"></span>
+                </div>
+                <select class="form-control">
+                    <option name="multiple" class="d-none"></option>
+                </select>
+            </div>
+        </template>
+        <template id="optionTemplate">
+            <option name="option"></option>
+        </template>
     </div>
-    <div id="options" class="row mt-3 justify-content-start align-items-center">
-        <button class="btn btn-primary mt-3 md-5" onclick="addProductForm()">新增商品</button>
-    </div>
-    <div id="product" class="row mt-3 justify-content-start align-items-center"></div>
 </div>
 <script src="/js/fetch_request/shop/profile.js"></script>
+<script src="/js/fetch_request/storePage.js"></script>
 <script src="/js/fetch_request/shop/deleteProduct.js"></script>
 <script src="/js/fetch_request/shop/addProduct.js"></script>
 <script src="/js/fetch_request/shop/update.js"></script>
@@ -216,13 +267,11 @@
         putStore(data);
     }
 
-    window.addEventListener('hashchange', function() {
-        if (!location.hash.split('#')[1]) return;
-        let selected = document.getElementById(location.hash.split('#')[1]);
-        let name = selected.querySelector('a > div.card-footer.justify-content-between > span:nth-child(1)').textContent;
+    const deleteProduct = (id) => {
+        const data = document.getElementById(id).dataset;
         Swal.fire({
             title: '刪除商品',
-            html: `在下方輸入 <span class="font-weight-bold text-danger">${name}</span> 以確認刪除`,
+            html: `在下方輸入 <span class="font-weight-bold text-danger">${data.name}</span> 以確認刪除`,
             input: 'text',
             inputAttributes: {
                 autocapitalize: 'off'
@@ -233,24 +282,97 @@
             confirmButtonText: '刪除',
             showLoaderOnConfirm: true,
             preConfirm: (confirm) => {
-                if (confirm == name) return delProduct(selected.id);
+                if (confirm == data.name) return delProduct(selected.id);
                 else Swal.showValidationMessage(
                     '輸入錯誤'
                 );
             },
             allowOutsideClick: () => !Swal.isLoading()
         }).then((result) => {
-            history.replaceState(null, null, ' ');
             if (result.isConfirmed) {
                 getProductFn();
                 Swal.fire(
                     '刪除成功',
-                    `${name} 已經被刪除`,
+                    `${data.name} 已經被刪除`,
                     'success'
                 );
             }
-        })
-    }, false);
+        });
+    };
+    const pauseProduct = (id) => {
+        const data = document.getElementById(id).dataset;
+        Swal.fire({
+            title: `${actionStr}商品`,
+            html: `在下方輸入 <span class="font-weight-bold text-danger">${data.name}</span> 以確認${actionStr}`,
+            input: 'text',
+            inputAttributes: {
+                autocapitalize: 'off'
+            },
+            showCancelButton: true,
+            confirmButtonColor: '#bf0d0d',
+            cancelButtonColor: '#808080',
+            confirmButtonText: actionStr,
+            showLoaderOnConfirm: true,
+            preConfirm: (confirm) => {
+                if (confirm == data.name) return delProduct(selected.id);
+                else Swal.showValidationMessage(
+                    '輸入錯誤'
+                );
+            },
+            allowOutsideClick: () => !Swal.isLoading()
+        }).then((result) => {
+            if (result.isConfirmed) {
+                getProductFn();
+                Swal.fire(
+                    `${actionStr}成功`,
+                    `${data.name} 已經${actionStr}`,
+                    'success'
+                );
+            }
+        });
+    };
+
+    function productClick(element) {
+        const data = element.dataset;
+        const popupTemplate = document.getElementById('productCardTemplate').cloneNode(true);
+        popupTemplate.content.querySelector('[name="title"]').textContent = data.name;
+        popupTemplate.content.querySelector('[name="describe"]').value = data.describe;
+        popupTemplate.content.querySelector('[name="price"]').value = data.price;
+        popupTemplate.content.querySelector('[name="type"]').value = data.type;
+        popupTemplate.content.querySelector('[name="del"]').setAttribute("onClick", `deleteProduct("${data.id}")`);
+        popupTemplate.content.querySelector('[name="pause"]').setAttribute("onClick", `deleteProduct("${data.id}")`);
+        popupTemplate.content.querySelector('[name="unpause"]').setAttribute("onClick", `deleteProduct("${data.id}"")`);
+
+        if (data.pause) popupTemplate.content.querySelector('[name="unpause"]').classList.remove('d-none');
+        else popupTemplate.content.querySelector('[name="pause"]').classList.remove('d-none');
+
+        const newTitle = document.createElement("h4");
+        newTitle.textContent = "選項";
+        const optionDiv = popupTemplate.content.querySelector('[name="options"]');
+        popupTemplate.content.querySelector('div').insertBefore(newTitle, optionDiv);
+
+        const options = JSON.parse(data.options);
+        for (let i = 0; i < options.length; i++) {
+            const newProductOptions = document.getElementById('productOptionsTemplate').cloneNode(true);
+            newProductOptions.content.querySelector('[name="title"]').textContent = options[i].title;
+            newProductOptions.content.querySelector('[name="multiple"]').textContent = options[i].multiple ? `多選` : `單選`;
+            const option = options[i]['option'];
+            for (let j = 0; j < option.length; j++) {
+                const newProductOption = document.getElementById('optionTemplate').cloneNode(true);
+                newProductOption.content.querySelector('[name="option"]').textContent = `${option[j].name} ${parseInt(option[j].cost)?("NT$ "+option[j].cost):""}`;
+                const ProductOption = document.importNode(newProductOption.content, true);
+                newProductOptions.content.querySelector('div > select').appendChild(ProductOption);
+            }
+            const productOptions = document.importNode(newProductOptions.content, true);
+            popupTemplate.content.querySelector('div').insertBefore(productOptions, optionDiv);
+        }
+        const card = document.importNode(popupTemplate.content, true);
+
+        Swal.fire({
+            html: card.querySelector('div'),
+            showConfirmButton: false
+        });
+    }
 
     async function getProductFn(url) {
         if (url) localStorage.setItem('url', url);
@@ -263,11 +385,14 @@
         let productList = document.getElementById('product');
         for (let i = 0; i < data.result.length; i++) {
             const product = data.result[i];
-            const newProduct = document.getElementById('productTemplate');
+            const newProduct = document.getElementById('productTemplate').cloneNode(true);
             if (product.pause) {
                 newProduct.content.querySelector('div > a > img').classList.add('blur');
                 newProduct.content.querySelector('div > .overlay-text').textContent = "暫時下架";
             }
+            for (const key in product)
+                newProduct.content.querySelector('div').dataset[key] = product[key];
+            console.log(newProduct.content.querySelector('div').dataset)
             newProduct.content.querySelector('div > a > .card-footer > span:nth-child(1)').textContent = product.name;
             newProduct.content.querySelector('div').id = product.id;
             newProduct.content.querySelector('div > a > .card-footer > span:nth-child(2)').textContent = "NT$" + product.price;
