--- a/views/include/shop/update.ejs
+++ b/views/include/shop/update.ejs
@@ -32,43 +32,47 @@
                         <input type="number" id="price" class="form-control" placeholder="價格" name="price">
                     </div>
                 </form>
-                <button class="btn btn-primary" onclick="submitProduct()">建立</button>
+                <button class="btn btn-primary" onclick="submitProduct()">更新</button>
+                <button class="btn btn-secondary" onclick="location.href='/shop'">取消</button>
             </div>
         </div>
     </div>
     <div class="row">
         <template id="optionTemplate">
-        <div class="card col-12 mt-3" name="option">
-            <div class="input-group mb-2 mt-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">項目</span>
+            <div class="card col-12 mt-3" name="option">
+                <div class="input-group mb-2 mt-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">項目</span>
+                    </div>
+                    <input type="text" class="form-control" placeholder="項目" name="title" autocomplete="off">
+                    <button class="btn ml-3" onclick="this.parentNode.parentNode.remove()">X</button>
                 </div>
-                <input type="text" class="form-control" placeholder="項目" name="title" autocomplete="off">
-                <button class="btn ml-3" onclick="this.parentNode.parentNode.remove()">X</button>
-            </div>
-            <div class="input-group mb-2">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">選項</span>
+                <div class="input-group mb-2">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">選項</span>
+                    </div>
+                    <select class="form-control" name="multiple">
+                        <option value="false">單選</option>
+                        <option value="true">複選</option>
+                    </select>
                 </div>
-                <select class="form-control" name="multiple">
-                                <option value="false">單選</option>
-                                <option value="true">複選</option>
-                            </select>
-            </div>
-            <div class="input-group mb-2">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">必須填寫</span>
+                <div class="input-group mb-2">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">必須填寫</span>
+                    </div>
+                    <select class="form-control" name="required">
+                        <option value="true">是</option>
+                        <option value="false">否</option>
+                    </select>
                 </div>
-                <select class="form-control" name="required">
-                                <option value="true">是</option>
-                                <option value="false">否</option>
-                            </select>
+                <ul name="child-options">
+                    <li>
+                        <p>子選項</p>
+                    </li>
+                    <button name="child-options-add" class="btn btn-primary ml-3 mt-1"
+                        onclick="addChildOption(this)">+</button>
+                </ul>
             </div>
-            <ul name="child-options">
-                <li><p>子選項</p></li>
-                <button name="child-options-add" class="btn btn-primary ml-3 mt-1" onclick="addChildOption(this)">+</button>
-            </ul>
-        </div>
         </template>
         <template id="childOptionTemplate">
             <li class="input-group mb-2 col-md-8 col-sm-12 mt-1" name="child-option">
@@ -79,7 +83,8 @@
                 <div class="input-group-prepend ml-3">
                     <span class="input-group-text">加錢</span>
                 </div>
-                <input type="number" class="form-control" placeholder="須額外花費金額" name="child-cost" value="0" autocomplete="off">
+                <input type="number" class="form-control" placeholder="須額外花費金額" name="child-cost" value="0"
+                    autocomplete="off">
                 <button class="btn ml-3" name="child-options-remove" onclick="this.parentNode.remove()">X</button>
             </li>
         </template>
@@ -87,20 +92,50 @@
     <div id="options" class="row mt-3 justify-content-start align-items-center">
         <button class="btn btn-primary mt-3 md-5" onclick="addOption(this)">新增選項</button>
     </div>
-    <script src="/js/fetch_request/storePage.js"></script>
 </div>
+<script src="/js/fetch_request/shop/oneProduct.js"></script>
+<script src="/js/fetch_request/shop/updateProduct.js"></script>
 <script>
-    const dataStr = decodeURI(location.href.split('?')[1]);
-    if (dataStr) {
-        const data = dataStr.split('&');
-        for (let i = 0; i < data.length; i++)
-            if (document.getElementById(data[i].split('=')[0]))
-                document.getElementById(data[i].split('=')[0]).value = data[i].split('=')[1];
-    }
-    document.getElementById('loader').classList.remove('is-active');
+    const id = decodeURI(location.href.split('?')[1]);
+    const testID = /^[a-f\d]{24}$/i.test(id);
 
-    function addChildOption(element) {
-        const childOptionTemplate = document.getElementById('childOptionTemplate');
+    async function getProduct(id) {
+        const unparse = await getOneProduct(id);
+        const parse = JSON.parse(unparse);
+        const data = parse.result;
+        document.getElementById('product').value = data.name;
+        document.getElementById('price').value = data.price;
+        document.getElementById('describe').value = data.describe;
+        document.getElementById('tag').value = data.type;
+
+        const options = JSON.parse(data.options);
+        for (let i = 0; i < options.length; i++) {
+            const optionTemplate = document.getElementById('optionTemplate').cloneNode(true);
+            optionTemplate.content.querySelector('[name="title"]').value = options[i].title;
+            for (let j = 0; j < options[i]['option'].length; j++)
+                addChildOption(optionTemplate.content.querySelector('[name="child-options-add"]'), options[i]['option'][j]);
+            optionTemplate.content.querySelector('[name="child-options-remove"]').style.visibility = 'hidden';
+            optionTemplate.content.querySelector('[name="multiple"]').value = (options[i].multiple ? "true" : "false");
+            optionTemplate.content.querySelector('[name="required"]').value = (options[i].requires ? "true" : "false");
+            const newOption = document.importNode(optionTemplate.content, true);
+            const insertPos = document.getElementById('options');
+            insertPos.insertBefore(newOption, insertPos.lastElementChild);
+            const allNodes = insertPos.children;
+            if (allNodes.length > 1) {
+                allNodes[allNodes.length - 2].querySelector('[name="multiple"]').value = (options[i].multiple ? "true" : "false");
+                allNodes[allNodes.length - 2].querySelector('[name="required"]').value = (options[i].requires ? "true" : "false");
+            }
+        }
+    }
+    if (testID)
+        getProduct(id);
+
+    function addChildOption(element, data) {
+        const childOptionTemplate = document.getElementById('childOptionTemplate').cloneNode(true);
+        if (data) {
+            childOptionTemplate.content.querySelector('[name="child-title"]').value = data.name;
+            childOptionTemplate.content.querySelector('[name="child-cost"]').value = data.cost;
+        }
         const newChildOption = document.importNode(childOptionTemplate.content, true);
         element.parentNode.insertBefore(newChildOption, element);
     }
@@ -146,16 +181,14 @@
             });
         }
 
-        let oProduct = {
+        const oProduct = {
+            id: id,
             name: name.value,
             describe: describe.value,
             tag: tag.value,
             price: price.value,
             options: JSON.stringify(optionData),
         };
-        addProduct(oProduct);
         document.getElementById('loader').classList.add('is-active');
     }
 </script>
-<script src="/js/fetch_request/shop/deleteProduct.js"></script>
-<script src="/js/fetch_request/shop/addProduct.js"></script>
