--- a/views/include/shop/update.ejs
+++ b/views/include/shop/update.ejs
@@ -189,6 +189,7 @@
             price: price.value,
             options: JSON.stringify(optionData),
         };
+        putProduct(oProduct);
         document.getElementById('loader').classList.add('is-active');
     }
 </script>
